fix: fix horizontal scroll

--- a/src/components/MovieCardList/MovieCardList.css
+++ b/src/components/MovieCardList/MovieCardList.css
@@ -8,6 +8,7 @@
   display: grid;
   grid-gap: 20px;
   grid-template-columns: repeat(5, 1fr);
+  padding: 0 40px;
 }
 
 .movie__empty-message {
